reviewed/finalized download-trials and in-person-event created contact-a-expert

--- a/emails/elnaz/auto-responder/download-trial-box.htm
+++ b/emails/elnaz/auto-responder/download-trial-box.htm
@@ -8,7 +8,7 @@
 <body>
 
 [[widget:branding-v2]]
-
+<!--Headline-->
 <table class="body">
   <tr>
     <td class="center" align="center" valign="top">
@@ -27,6 +27,7 @@
 
                           <p>Thank you for your interest. You can find your trial copy below.</p>
                         </td>
+                        <td class="expander"></td>
                       </tr>
                     </table>
                   </td>
@@ -40,7 +41,7 @@
     </td>
   </tr>
 </table>
-
+<!--Trial download,description-->
 <table class="body">
   <tr>
     <td class="center" align="center" valign="top">
@@ -65,12 +66,14 @@
                             </tr>
                           </table>
                         </td>
+                        <td class="expander"></td>
                       </tr>
                       <tr>
                         <td class="three sub-columns"></td>
                         <td class="nine sub-columns">
                           <a href="#">Release Notes and Guides</a>
                         </td>
+                        <td class="expander"></td>
                       </tr>
                     </table>
                   </td>
@@ -83,6 +86,7 @@
                           </a>
                         </td>
                         <td class="three sub-columns"></td>
+                        <td class="expander"></td>
                       </tr>
                     </table>
                   </td>
@@ -178,6 +182,7 @@
     </td>
   </tr>
 </table>
+<!--Social media-->
 <table class="body">
   <tr>
     <td class="center" align="center" valign="top">
@@ -193,16 +198,28 @@
                       <tr>
                         <td class="center">
                           <span class="mr-20 valign-super">Share</span>
+                          <!--[if gte mso 9]>
+                          <img src="http://software.dell.com/images/email/blank.gif" width="10">
+                          <![endif]-->
                           <a href="#" class="inline-block mr-20">
                             <img src="http://stage.software.dell.com/images/email/icon-google.png" alt="google"/>
                           </a>
+                          <!--[if gte mso 9]>
+                          <img src="http://software.dell.com/images/email/blank.gif" width="10">
+                          <![endif]-->
                           <a href="#" class="inline-block mr-20">
                             <img src="http://stage.software.dell.com/images/email/icon-twitter.png" alt="twitter"/>
                           </a>
+                          <!--[if gte mso 9]>
+                          <img src="http://software.dell.com/images/email/blank.gif" width="10">
+                          <![endif]-->
                           <a href="#" class="inline-block mr-20">
                             <img src="http://stage.software.dell.com/images/email/icon-linkedin.png" alt="linkedin"/>
                           </a>
-                          <a href="#" class="inline-block mr-20">
+                          <!--[if gte mso 9]>
+                          <img src="http://software.dell.com/images/email/blank.gif" width="10">
+                          <![endif]-->
+                          <a href="#" class="inline-block">
                             <img src="http://stage.software.dell.com/images/email/icon-facebook.png" alt="facebook"/>
                           </a>
                         </td>
@@ -222,6 +239,7 @@
     </td>
   </tr>
 </table>
+<!--Next steps-->
 <table class="body">
   <tr>
     <td class="center" align="center" valign="top">
@@ -254,12 +272,14 @@
                         <td class="nine sub-columns">
                           <img class="img-border" src="http://stage.software.dell.com/images/email/ns-1.png" alt=""/>
                         </td>
+                        <td class="expander"></td>
                       </tr>
                       <tr>
                         <td class="three sub-columns"></td>
                         <td class="nine sub-columns">
                           <a href="#" class="text-size-15">Lorem ipsum dolor sit amet, consectetuer adipiscing</a>
                         </td>
+                        <td class="expander"></td>
                       </tr>
                       <tr>
                         <td class="three sub-columns"></td>
@@ -267,6 +287,7 @@
                           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
                             eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
                         </td>
+                        <td class="expander"></td>
                       </tr>
                     </table>
                   </td>
@@ -277,12 +298,14 @@
                           <img class="img-border" src="http://stage.software.dell.com/images/email/ns-1.png" alt=""/>
                         </td>
                         <td class="three sub-columns"></td>
+                        <td class="expander"></td>
                       </tr>
                       <tr>
                         <td class="nine sub-columns">
                           <a class="text-size-15" href="#">Lorem ipsum dolor sit amet, consectetuer adipiscing</a>
                         </td>
                         <td class="three sub-columns"></td>
+                        <td class="expander"></td>
                       </tr>
                       <tr>
                         <td class="nine sub-columns">
@@ -290,6 +313,7 @@
                             eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
                         </td>
                         <td class="three sub-columns"></td>
+                        <td class="expander"></td>
                       </tr>
                     </table>
                   </td>
@@ -317,6 +341,7 @@
                                         <img class="img-border" src="http://stage.software.dell.com/images/email/ns-1.png" alt=""/>
                                       </td>
                                       <td class="three sub-columns"></td>
+                                      <td class="expander"></td>
                                     </tr>
                                     <tr>
                                       <td class="three sub-columns"></td>
@@ -325,6 +350,7 @@
                                           adipiscing</a>
                                       </td>
                                       <td class="three sub-columns"></td>
+                                      <td class="expander"></td>
                                     </tr>
                                     <tr>
                                       <td class="three sub-columns"></td>
@@ -334,6 +360,7 @@
                                           eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
                                       </td>
                                       <td class="six sub-columns"></td>
+                                      <td class="expander"></td>
                                     </tr>
                                   </table>
                                 </td>
@@ -367,6 +394,7 @@
                                         <img class="img-border" src="http://stage.software.dell.com/images/email/ns-1.png" alt=""/>
                                       </td>
                                       <td class="three sub-columns"></td>
+                                      <td class="expander"></td>
                                     </tr>
                                     <tr>
                                       <td class="three sub-columns"></td>
@@ -375,6 +403,7 @@
                                           adipiscing</a>
                                       </td>
                                       <td class="three sub-columns"></td>
+                                      <td class="expander"></td>
                                     </tr>
                                     <tr>
                                       <td class="three sub-columns"></td>
@@ -384,6 +413,7 @@
                                           eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
                                       </td>
                                       <td class="six sub-columns"></td>
+                                      <td class="expander"></td>
                                     </tr>
                                   </table>
                                 </td>
