--- a/emails/elnaz/auto-responder/in-person-event.htm
+++ b/emails/elnaz/auto-responder/in-person-event.htm
@@ -4,16 +4,11 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="/css/global.css">
-  <style>
-    .pdf {
-      background: url('http://software.dell.com/documents/images/us-cellular-casestudy-29818.jpg') center center;
-    }
-  </style>
 </head>
 <body>
 
 [[widget:branding-v2]]
-
+<!--Headline-->
 <table class="body">
   <tr>
     <td class="center" align="center" valign="top">
@@ -35,6 +30,7 @@
                           <p>Thank you for registering for the <a href="#">
                             WITI Dell Backup Resiliencey without Compromise Overview.</a></p>
                         </td>
+                        <td class="expander"></td>
                       </tr>
                     </table>
                   </td>
@@ -48,7 +44,7 @@
     </td>
   </tr>
 </table>
-
+<!--Calendar-->
 <table class="body">
   <tr>
     <td class="center" align="center" valign="top">
@@ -65,17 +61,18 @@
                 </tr>
                 <![endif]-->
                 <tr>
-                  <td>
+                  <td class="wrapper">
                     <table class="six columns">
                       <tr>
                         <td class="eight sub-columns"></td>
                         <td class="four sub-columns">
                           <img src="http://stage.software.dell.com/images/email/icon-calendar.png">
                         </td>
+                        <td class="expander"></td>
                       </tr>
                     </table>
                   </td>
-                  <td class="pt-0">
+                  <td class="wrapper last pt-0">
                     <table class="six columns">
                       <tr>
                         <td class="twelve sub-columns text-white text-pad">
@@ -101,6 +98,7 @@
                             </table>
                           </div>
                         </td>
+                        <td class="expander"></td>
                       </tr>
                     </table>
                   </td>
@@ -194,20 +192,11 @@
             </td>
           </tr>
         </table>
-        <table class="container">
-          <tr>
-            <td>
-              <table class="row row-blue">
-              </table>
-            </td>
-          </tr>
-
-        </table>
-
       </center>
     </td>
   </tr>
 </table>
+<!--Social media-->
 <table class="body">
   <tr>
     <td class="center" align="center" valign="top">
@@ -264,6 +253,7 @@
     </td>
   </tr>
 </table>
+<!--Next steps-->
 <table class="body">
   <tr>
     <td class="center" align="center" valign="top">
@@ -294,15 +284,16 @@
                       <tr>
                         <td class="three sub-columns"></td>
                         <td class="nine sub-columns">
-                          <img class="img-border center-block"
-                               src="http://stage.software.dell.com/images/email/ns-1.png" alt=""/>
+                          <img class="img-border" src="http://stage.software.dell.com/images/email/ns-1.png" alt=""/>
                         </td>
+                        <td class="expander"></td>
                       </tr>
                       <tr>
                         <td class="three sub-columns"></td>
                         <td class="nine sub-columns">
                           <a href="#" class="text-size-15">Lorem ipsum dolor sit amet, consectetuer adipiscing</a>
                         </td>
+                        <td class="expander"></td>
                       </tr>
                       <tr>
                         <td class="three sub-columns"></td>
@@ -310,6 +301,7 @@
                           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
                             eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
                         </td>
+                        <td class="expander"></td>
                       </tr>
                     </table>
                   </td>
@@ -317,20 +309,17 @@
                     <table class="six columns">
                       <tr>
                         <td class="nine sub-columns">
-                          <!--<div class="img-border img-crop">
-                            <img class="img-responsive center-block"
-                                 src="http://software.dell.com/documents/images/us-cellular-casestudy-29818.jpg"
-                                 alt=""/>
-                          </div>-->
-                          <div class="pdf img-cover"></div>
+                          <img class="img-border" src="http://stage.software.dell.com/images/email/ns-1.png" alt=""/>
                         </td>
                         <td class="three sub-columns"></td>
+                        <td class="expander"></td>
                       </tr>
                       <tr>
                         <td class="nine sub-columns">
                           <a class="text-size-15" href="#">Lorem ipsum dolor sit amet, consectetuer adipiscing</a>
                         </td>
                         <td class="three sub-columns"></td>
+                        <td class="expander"></td>
                       </tr>
                       <tr>
                         <td class="nine sub-columns">
@@ -338,6 +327,7 @@
                             eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
                         </td>
                         <td class="three sub-columns"></td>
+                        <td class="expander"></td>
                       </tr>
                     </table>
                   </td>
@@ -362,10 +352,10 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <img class="img-border center-block"
-                                             src="http://stage.software.dell.com/images/email/ns-1.png" alt=""/>
+                                        <img class="img-border" src="http://stage.software.dell.com/images/email/ns-1.png" alt=""/>
                                       </td>
                                       <td class="three sub-columns"></td>
+                                      <td class="expander"></td>
                                     </tr>
                                     <tr>
                                       <td class="three sub-columns"></td>
@@ -374,6 +364,7 @@
                                           adipiscing</a>
                                       </td>
                                       <td class="three sub-columns"></td>
+                                      <td class="expander"></td>
                                     </tr>
                                     <tr>
                                       <td class="three sub-columns"></td>
@@ -383,6 +374,7 @@
                                           eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
                                       </td>
                                       <td class="six sub-columns"></td>
+                                      <td class="expander"></td>
                                     </tr>
                                   </table>
                                 </td>
@@ -413,14 +405,10 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <!--<div class="img-crop img-border">
-                                          <img class="img-responsive center-block"
-                                               src="http://software.dell.com/documents/images/us-cellular-casestudy-29818.jpg"
-                                               alt=""/>
-                                        </div>-->
-                                        <div class="pdf img-cover"></div>
+                                        <img class="img-border" src="http://stage.software.dell.com/images/email/ns-1.png" alt=""/>
                                       </td>
                                       <td class="three sub-columns"></td>
+                                      <td class="expander"></td>
                                     </tr>
                                     <tr>
                                       <td class="three sub-columns"></td>
@@ -429,6 +417,7 @@
                                           adipiscing</a>
                                       </td>
                                       <td class="three sub-columns"></td>
+                                      <td class="expander"></td>
                                     </tr>
                                     <tr>
                                       <td class="three sub-columns"></td>
@@ -438,6 +427,7 @@
                                           eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
                                       </td>
                                       <td class="six sub-columns"></td>
+                                      <td class="expander"></td>
                                     </tr>
                                   </table>
                                 </td>
