completed contact-a-expert template

--- a/emails/elnaz/auto-responder/contact-a-expert.htm
+++ b/emails/elnaz/auto-responder/contact-a-expert.htm
@@ -21,16 +21,54 @@
                 <tr>
                   <td class="wrapper last">
                     <table class="twelve columns">
+                      <!--[if gte mso 9]>
                       <tr>
-                        <td class="center text-pad pt-10">
+                        <td class="five sub-columns"><img src="http://software.dell.com/images/email/blank.gif"></td>
+                        <td class="two sub-columns"><img src="http://software.dell.com/images/email/blank.gif"></td>
+                        <td class="five sub-columns"><img src="http://software.dell.com/images/email/blank.gif"></td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="five sub-columns"></td>
+                        <td class="two sub-columns">
+                          <h1>Statistica</h1>
+                        </td>
+                        <td class="five sub-columns"></td>
+                        <td class="expander"></td>
+                      </tr>
+                      <![endif]-->
+                      <!--[if !mso]><!-->
+                      <tr>
+                        <td class="center">
                           <center>
-                            <h1 class="inline-block">Statistica</h1>
+                            <h1 class="inline-block mt-20">Statistica</h1>
                           </center>
-                          <p>We’ve received your request to hear from a Dell expert about Statistica. We will follow
-                          up with you shortly.</p>
                         </td>
                         <td class="expander"></td>
                       </tr>
+                      <!--<![endif]-->
+                    </table>
+                  </td>
+                </tr>
+              </table>
+              <table class="row">
+                <tr>
+                  <td class="wrapper last">
+                    <table class="twelve columns">
+                      <tr>
+                        <td class="text-pad">
+                          <p class="mb-20">We’ve received your request to hear from a Dell expert about Statistica. We
+                            will follow
+                            up with you shortly.</p>
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <!--[if gte mso 9]>
+                      <tr>
+                        <td><img src="http://software.dell.com/images/email/blank.gif"></td>
+                        <td class="expander"></td>
+                      </tr>
+                      <![endif]-->
                     </table>
                   </td>
                 </tr>
