--- a/emails/elnaz/auto-responder/download-trial-box.htm
+++ b/emails/elnaz/auto-responder/download-trial-box.htm
@@ -270,7 +270,7 @@
                       <tr>
                         <td class="three sub-columns"></td>
                         <td class="nine sub-columns">
-                          <img class="img-border" src="http://stage.software.dell.com/images/email/ns-1.png" alt=""/>
+                          <img class="img-border" src="http://software.dell.com/images/email/ns-1.png" alt=""/>
                         </td>
                         <td class="expander"></td>
                       </tr>
@@ -295,7 +295,7 @@
                     <table class="six columns">
                       <tr>
                         <td class="nine sub-columns">
-                          <img class="img-border" src="http://stage.software.dell.com/images/email/ns-1.png" alt=""/>
+                          <img class="img-border" src="http://software.dell.com/images/email/doc.jpg" alt=""/>
                         </td>
                         <td class="three sub-columns"></td>
                         <td class="expander"></td>
@@ -338,7 +338,7 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <img class="img-border" src="http://stage.software.dell.com/images/email/ns-1.png" alt=""/>
+                                        <img class="img-border" src="http://software.dell.com/images/email/ns-1.png" alt=""/>
                                       </td>
                                       <td class="three sub-columns"></td>
                                       <td class="expander"></td>
@@ -391,7 +391,7 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <img class="img-border" src="http://stage.software.dell.com/images/email/ns-1.png" alt=""/>
+                                        <img class="img-border" src="http://software.dell.com/images/email/doc.jpg" alt=""/>
                                       </td>
                                       <td class="three sub-columns"></td>
                                       <td class="expander"></td>
