--- a/emails/elnaz/auto-responder/in-person-event-agenda.htm
+++ b/emails/elnaz/auto-responder/in-person-event-agenda.htm
@@ -23,12 +23,16 @@
                     <table class="twelve columns">
                       <tr>
                         <td class="text-pad pt-10">
-                          <h1 class="mb-30">Thank you for Registering</h1>
+                          <h1 class="mb-30">Registration successful for Event: Overcome the security challenges of
+                            ccalability, BODY and mobility</h1>
 
-                          <p>Dear Registrant,</p>
+                          <p>Dear Sir/Madam,</p>
 
-                          <p>Thank you for registering for the <a href="#">
-                            WITI Dell Backup Resiliencey without Compromise Overview.</a></p>
+                          <p>
+                            your seat is reserved. Our event agency will send reminder email or contact you via
+                            phone to confirm youyr participation before the actual event.<br>
+                            Once again, thank you for registering.
+                          </p>
                         </td>
                         <td class="expander"></td>
                       </tr>
@@ -44,12 +48,11 @@
     </td>
   </tr>
 </table>
-<!--Calendar-->
+<!--Calendar/Agenda-->
 <table class="body">
   <tr>
     <td class="center" align="center" valign="top">
       <center>
-
         <table class="container">
           <tr>
             <td>
@@ -86,7 +89,7 @@
 
                           <p class="mb-0">Event: In Person</p>
                           <!--[if gte mso 9]>
-                            <img src="http://software.dell.com/images/email/blank.gif" height="10">
+                          <img src="http://software.dell.com/images/email/blank.gif" height="10">
                           <![endif]-->
                           <div class="hide-for-small">
                             <table class="button button-green button-width-auto mt-10 mb-0">
@@ -114,6 +117,7 @@
               <!--[if !mso]><!-->
               <!-- Only visible for mobile -->
               <div class="show-for-small">
+                <!--calendar-->
                 <table class="row pt-10 pb-10 row-blue">
                   <tr>
                     <td class="wrapper last">
@@ -164,28 +168,253 @@
                     </td>
                   </tr>
                 </table>
+                <!--Agenda-->
+                <table class="row pt-10 pb-10">
+                  <tr>
+                    <td class="wrapper last">
+                      <table class="twelve columns">
+                        <tr>
+                          <td class="text-pad">
+                            <strong class="pl-10-md">Event Agenda</strong>
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            1:30PM - 2:30PM
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            Registration
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            1:30PM - 2:30PM
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry typesetting
+                            industry.
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            1:30PM - 2:30PM
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            Tea Break
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            1:30PM - 2:30PM
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            Lorem Ipsum is simply dummy text of the printing
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            1:30PM - 2:30PM
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been the industry's standard dummy text ever since the 1500s.
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            1:30PM - 2:30PM
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been the industry's standard dummy text ever since the 1500s.
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            1:30PM - 2:30PM
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            Lorem Ipsum is simply dummy text of the printing
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            1:30PM - 2:30PM
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            Lorem Ipsum is simply dummy text of the printing
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            1:30PM - 2:30PM
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            Lorem Ipsum is simply dummy text of the printing
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                      </table>
+                    </td>
+                  </tr>
+                </table>
               </div>
               <!--<![endif]-->
-              <table class="row text-size-13 mt-20">
+              <!--Agenda-->
+              <table class="row text-size-13 mt-20 hide-for-small">
                 <tr>
                   <td class="wrapper last">
-
                     <table class="twelve columns">
                       <tr>
                         <td class="text-pad">
-                          <p class="mb-20">
-                            We look forward to having you there!
-                          </p>
-
-                          <p>
-                            For more information on this or other webcasts, contact John Doe at
-                            <a href="mailto:John.Doe@software.dell.com">John.Doe@software.dell.com</a>
-                          </p>
+                          <strong>Event Agenda</strong>
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="wrapper last">
+                    <table class="twelve columns">
+                      <tr>
+                        <td class="three sub-columns text-pad">
+                          1:30PM - 2:30PM
+                        </td>
+                        <td class="nine sub-columns last">
+                          Registration
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="three sub-columns text-pad">
+                          1:30PM - 2:30PM
+                        </td>
+                        <td class="nine sub-columns last">
+                          Lorem Ipsum is simply dummy text of the printing and typesetting industry typesetting
+                          industry.
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="three sub-columns text-pad">
+                          1:30PM - 2:30PM
+                        </td>
+                        <td class="nine sub-columns last">
+                          Tea Break
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="three sub-columns text-pad">
+                          1:30PM - 2:30PM
+                        </td>
+                        <td class="nine sub-columns last">
+                          Lorem Ipsum is simply dummy text of the printing
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="three sub-columns text-pad">
+                          1:30PM - 2:30PM
+                        </td>
+                        <td class="nine sub-columns last">
+                          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                          been the industry's standard dummy text ever since the 1500s.
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="three sub-columns text-pad">
+                          1:30PM - 2:30PM
+                        </td>
+                        <td class="nine sub-columns last">
+                          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                          been the industry's standard dummy text ever since the 1500s.
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="three sub-columns text-pad">
+                          1:30PM - 2:30PM
+                        </td>
+                        <td class="nine sub-columns last">
+                          Lorem Ipsum is simply dummy text of the printing
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="three sub-columns text-pad">
+                          1:30PM - 2:30PM
+                        </td>
+                        <td class="nine sub-columns last">
+                          Lorem Ipsum is simply dummy text of the printing
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="three sub-columns text-pad">
+                          1:30PM - 2:30PM
+                        </td>
+                        <td class="nine sub-columns last">
+                          Lorem Ipsum is simply dummy text of the printing
                         </td>
                         <td class="expander"></td>
                       </tr>
                     </table>
 
+                  </td>
+                </tr>
+              </table>
+              <!--description-->
+              <table class="row">
+                <tr>
+                  <td class="wrapper last">
+                    <table class="twelve columns">
+                      <tr>
+                        <td class="text-pad">
+                          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                          been the industry's standard dummy text <a href="mailto:name@email.com">john.doe@software.dell.com</a>.
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                    </table>
                   </td>
                 </tr>
               </table>
@@ -244,7 +473,6 @@
                   </td>
                 </tr>
               </table>
-
             </td>
           </tr>
         </table>
@@ -352,7 +580,8 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <img class="img-border" src="http://software.dell.com/images/email/ns-1.png" alt=""/>
+                                        <img class="img-border" src="http://software.dell.com/images/email/ns-1.png"
+                                             alt=""/>
                                       </td>
                                       <td class="three sub-columns"></td>
                                       <td class="expander"></td>
@@ -405,7 +634,8 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <img class="img-border" src="http://software.dell.com/images/email/doc.jpg" alt=""/>
+                                        <img class="img-border" src="http://software.dell.com/images/email/doc.jpg"
+                                             alt=""/>
                                       </td>
                                       <td class="three sub-columns"></td>
                                       <td class="expander"></td>
