half way through webex event aligned calendar and text

--- a/emails/elnaz/auto-responder/in-person-event.htm
+++ b/emails/elnaz/auto-responder/in-person-event.htm
@@ -72,7 +72,7 @@
                       </tr>
                     </table>
                   </td>
-                  <td class="wrapper last pt-0">
+                  <td class="wrapper last">
                     <table class="six columns">
                       <tr>
                         <td class="twelve sub-columns text-white text-pad">
