--- a/emails/elnaz/auto-responder/webex-event.htm
+++ b/emails/elnaz/auto-responder/webex-event.htm
@@ -23,16 +23,12 @@
                     <table class="twelve columns">
                       <tr>
                         <td class="text-pad pt-10">
-                          <h1 class="mb-30">Registration successful for Event: Overcome the security challenges of
-                            ccalability, BODY and mobility</h1>
+                          <h1 class="mb-30">Thank you for Registering</h1>
 
-                          <p>Dear Sir/Madam,</p>
+                          <p>Dear Registrant,</p>
 
-                          <p>
-                            your seat is reserved. Our event agency will send reminder email or contact you via
-                            phone to confirm youyr participation before the actual event.<br>
-                            Once again, thank you for registering.
-                          </p>
+                          <p>Thank you for registering for the
+                            WITI Dell Backup Resiliencey without <a href="#">Webinar 9-8 event</a></p>
                         </td>
                         <td class="expander"></td>
                       </tr>
@@ -80,14 +76,6 @@
                       <tr>
                         <td class="twelve sub-columns text-white text-pad">
                           <h1 class="text-white">Save the date</h1>
-
-                          <p class="mb-0">Date: Sept 29, 2015</p>
-
-                          <p class="mb-0">Time: 3:00 PM EDT</p>
-
-                          <p class="mb-0">Location: Houston, TX</p>
-
-                          <p class="mb-0">Event: In Person</p>
                           <!--[if gte mso 9]>
                           <img src="http://software.dell.com/images/email/blank.gif" height="10">
                           <![endif]-->
@@ -133,14 +121,6 @@
 
                                     <div class="text-white pull-right">
                                       <h1 class="text-white">Save the date</h1>
-
-                                      <p class="mb-0">Date: Sept 29, 2015</p>
-
-                                      <p class="mb-0">Time: 3&#58;46 PM EDT</p>
-
-                                      <p class="mb-0">Location: Houston, TX</p>
-
-                                      <p class="mb-0">Event: In Person</p>
                                     </div>
                                   </td>
                                 </tr>
@@ -168,125 +148,64 @@
                     </td>
                   </tr>
                 </table>
-                <!--Agenda-->
+                <!--Agenda mobile-->
                 <table class="row pt-10 pb-10">
                   <tr>
                     <td class="wrapper last">
                       <table class="twelve columns">
                         <tr>
                           <td class="text-pad">
-                            <strong class="pl-10-md">Event Agenda</strong>
+                            <strong>When</strong>
                           </td>
                           <td class="expander"></td>
                         </tr>
                         <tr>
                           <td class="text-pad">
-                            1:30PM - 2:30PM
+                            Sept 22 2015, 1:00 AM, Pacific Daylight Time(North America)
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td></td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            Sept 22 2015, 1:00 AM, Brasilia Time
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td></td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            Sept 22 2015, 1:00 AM, Colombia Time
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td></td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            ept 22 2015, 1:00 AM, Gulf Standard Time
                           </td>
                           <td class="expander"></td>
                         </tr>
                         <tr>
                           <td class="text-pad">
-                            Registration
+                            <strong>Where</strong>
                           </td>
                           <td class="expander"></td>
                         </tr>
                         <tr>
                           <td class="text-pad">
-                            1:30PM - 2:30PM
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                        <tr>
-                          <td class="text-pad">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry typesetting
-                            industry.
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                        <tr>
-                          <td class="text-pad">
-                            1:30PM - 2:30PM
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                        <tr>
-                          <td class="text-pad">
-                            Tea Break
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                        <tr>
-                          <td class="text-pad">
-                            1:30PM - 2:30PM
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                        <tr>
-                          <td class="text-pad">
-                            Lorem Ipsum is simply dummy text of the printing
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                        <tr>
-                          <td class="text-pad">
-                            1:30PM - 2:30PM
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                        <tr>
-                          <td class="text-pad">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s.
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                        <tr>
-                          <td class="text-pad">
-                            1:30PM - 2:30PM
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                        <tr>
-                          <td class="text-pad">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s.
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                        <tr>
-                          <td class="text-pad">
-                            1:30PM - 2:30PM
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                        <tr>
-                          <td class="text-pad">
-                            Lorem Ipsum is simply dummy text of the printing
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                        <tr>
-                          <td class="text-pad">
-                            1:30PM - 2:30PM
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                        <tr>
-                          <td class="text-pad">
-                            Lorem Ipsum is simply dummy text of the printing
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                        <tr>
-                          <td class="text-pad">
-                            1:30PM - 2:30PM
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                        <tr>
-                          <td class="text-pad">
-                            Lorem Ipsum is simply dummy text of the printing
+                            <a href="http://email-elnaz.codingbyhand.com/emails/elnaz/auto-responder/webex-event.htm">
+                              http://email-elnaz.codingbyhand.com/emails/elnaz/auto-responder/webex-event.htm
+                            </a>
                           </td>
                           <td class="expander"></td>
                         </tr>
@@ -296,109 +215,53 @@
                 </table>
               </div>
               <!--<![endif]-->
-              <!--Agenda-->
+              <!--Agenda desktop-->
               <table class="row text-size-13 mt-20 hide-for-small">
                 <tr>
                   <td class="wrapper last">
                     <table class="twelve columns">
                       <tr>
-                        <td class="text-pad">
-                          <strong>Event Agenda</strong>
+                        <td class="three sub-columns text-pad">
+                          <strong>When</strong>
+                        </td>
+                        <td class="nine sub-columns last">
+                          Sept 22 2015, 1:00 AM, Pacific Daylight Time(North America)
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="three sub-columns"></td>
+                        <td class="nine sub-columns last">
+                          Sept 22 2015, 1:00 AM, Brasilia Time
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="three sub-columns"></td>
+                        <td class="nine sub-columns last">
+                          Sept 22 2015, 1:00 AM, Colombia Time
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="three sub-columns"></td>
+                        <td class="nine sub-columns last">
+                          ept 22 2015, 1:00 AM, Gulf Standard Time
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="three sub-columns text-pad">
+                          <strong>Where</strong>
+                        </td>
+                        <td class="nine sub-columns last">
+                          <a href="http://email-elnaz.codingbyhand.com/emails/elnaz/auto-responder/webex-event.htm">
+                            http://email-elnaz.codingbyhand.com/emails/elnaz/auto-responder/webex-event.htm
+                          </a>
                         </td>
                         <td class="expander"></td>
                       </tr>
                     </table>
-                  </td>
-                </tr>
-                <tr>
-                  <td class="wrapper last">
-                    <table class="twelve columns">
-                      <tr>
-                        <td class="three sub-columns text-pad">
-                          1:30PM - 2:30PM
-                        </td>
-                        <td class="nine sub-columns last">
-                          Registration
-                        </td>
-                        <td class="expander"></td>
-                      </tr>
-                      <tr>
-                        <td class="three sub-columns text-pad">
-                          1:30PM - 2:30PM
-                        </td>
-                        <td class="nine sub-columns last">
-                          Lorem Ipsum is simply dummy text of the printing and typesetting industry typesetting
-                          industry.
-                        </td>
-                        <td class="expander"></td>
-                      </tr>
-                      <tr>
-                        <td class="three sub-columns text-pad">
-                          1:30PM - 2:30PM
-                        </td>
-                        <td class="nine sub-columns last">
-                          Tea Break
-                        </td>
-                        <td class="expander"></td>
-                      </tr>
-                      <tr>
-                        <td class="three sub-columns text-pad">
-                          1:30PM - 2:30PM
-                        </td>
-                        <td class="nine sub-columns last">
-                          Lorem Ipsum is simply dummy text of the printing
-                        </td>
-                        <td class="expander"></td>
-                      </tr>
-                      <tr>
-                        <td class="three sub-columns text-pad">
-                          1:30PM - 2:30PM
-                        </td>
-                        <td class="nine sub-columns last">
-                          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                          been the industry's standard dummy text ever since the 1500s.
-                        </td>
-                        <td class="expander"></td>
-                      </tr>
-                      <tr>
-                        <td class="three sub-columns text-pad">
-                          1:30PM - 2:30PM
-                        </td>
-                        <td class="nine sub-columns last">
-                          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                          been the industry's standard dummy text ever since the 1500s.
-                        </td>
-                        <td class="expander"></td>
-                      </tr>
-                      <tr>
-                        <td class="three sub-columns text-pad">
-                          1:30PM - 2:30PM
-                        </td>
-                        <td class="nine sub-columns last">
-                          Lorem Ipsum is simply dummy text of the printing
-                        </td>
-                        <td class="expander"></td>
-                      </tr>
-                      <tr>
-                        <td class="three sub-columns text-pad">
-                          1:30PM - 2:30PM
-                        </td>
-                        <td class="nine sub-columns last">
-                          Lorem Ipsum is simply dummy text of the printing
-                        </td>
-                        <td class="expander"></td>
-                      </tr>
-                      <tr>
-                        <td class="three sub-columns text-pad">
-                          1:30PM - 2:30PM
-                        </td>
-                        <td class="nine sub-columns last">
-                          Lorem Ipsum is simply dummy text of the printing
-                        </td>
-                        <td class="expander"></td>
-                      </tr>
-                    </table>
-
                   </td>
                 </tr>
               </table>
@@ -533,7 +396,7 @@
                       </tr>
                     </table>
                   </td>
-                  <td class="wrapper last pt-0">
+                  <td class="wrapper last">
                     <table class="six columns">
                       <tr>
                         <td class="nine sub-columns">
