--- a/emails/elnaz/auto-responder/download-trial-box.htm
+++ b/emails/elnaz/auto-responder/download-trial-box.htm
@@ -201,25 +201,25 @@
                           <!--[if gte mso 9]>
                           <img src="http://software.dell.com/images/email/blank.gif" width="10">
                           <![endif]-->
-                          <a href="#" class="inline-block mr-20">
+                          <a href="https://plus.google.com/+DellSoftware/posts" class="inline-block mr-20">
                             <img src="http://stage.software.dell.com/images/email/icon-google.png" alt="google"/>
                           </a>
                           <!--[if gte mso 9]>
                           <img src="http://software.dell.com/images/email/blank.gif" width="10">
                           <![endif]-->
-                          <a href="#" class="inline-block mr-20">
+                          <a href="https://twitter.com/DellSoftware" class="inline-block mr-20">
                             <img src="http://stage.software.dell.com/images/email/icon-twitter.png" alt="twitter"/>
                           </a>
                           <!--[if gte mso 9]>
                           <img src="http://software.dell.com/images/email/blank.gif" width="10">
                           <![endif]-->
-                          <a href="#" class="inline-block mr-20">
+                          <a href="https://www.linkedin.com/company/dell-software?trk=biz-brand-tree-co-logo" class="inline-block mr-20">
                             <img src="http://stage.software.dell.com/images/email/icon-linkedin.png" alt="linkedin"/>
                           </a>
                           <!--[if gte mso 9]>
                           <img src="http://software.dell.com/images/email/blank.gif" width="10">
                           <![endif]-->
-                          <a href="#" class="inline-block">
+                          <a href="https://www.facebook.com/dellsoftware" class="inline-block">
                             <img src="http://stage.software.dell.com/images/email/icon-facebook.png" alt="facebook"/>
                           </a>
                         </td>
