fixed issue in outlook 2013&2010

--- a/emails/elnaz/auto-responder/download-trial-box.htm
+++ b/emails/elnaz/auto-responder/download-trial-box.htm
@@ -110,6 +110,7 @@
                                 </td>
                               </tr>
                             </table>
+                            <!--<![endif]-->
                           </td>
                           <td class="expander"></td>
                         </tr>
