--- a/emails/elnaz/auto-responder/webex-event.htm
+++ b/emails/elnaz/auto-responder/webex-event.htm
@@ -149,7 +149,7 @@
                   </tr>
                 </table>
                 <!--Agenda mobile-->
-                <table class="row pt-10 pb-10">
+                <table class="row pt-10">
                   <tr>
                     <td class="wrapper last">
                       <table class="twelve columns">
@@ -166,27 +166,15 @@
                           <td class="expander"></td>
                         </tr>
                         <tr>
-                          <td></td>
-                          <td class="expander"></td>
-                        </tr>
-                        <tr>
                           <td class="text-pad">
                             Sept 22 2015, 1:00 AM, Brasilia Time
                           </td>
                           <td class="expander"></td>
                         </tr>
                         <tr>
-                          <td></td>
-                          <td class="expander"></td>
-                        </tr>
-                        <tr>
                           <td class="text-pad">
                             Sept 22 2015, 1:00 AM, Colombia Time
                           </td>
-                          <td class="expander"></td>
-                        </tr>
-                        <tr>
-                          <td></td>
                           <td class="expander"></td>
                         </tr>
                         <tr>
@@ -209,13 +197,55 @@
                           </td>
                           <td class="expander"></td>
                         </tr>
+                        <tr>
+                          <td class="text-pad">
+                            <strong>Dial-in details</strong>
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            Call-in-toll-free number(Premier):
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            1-877-647-3111
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            Call-in number(Premier):
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            1-719-867-0497
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            Audio PASSCODE:
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td class="text-pad">
+                            <a href="#">International Numbers</a>
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
                       </table>
                     </td>
                   </tr>
                 </table>
               </div>
               <!--<![endif]-->
-              <!--Agenda desktop-->
+              <!--Agenda desktop 2-columns-->
               <table class="row text-size-13 mt-20 hide-for-small">
                 <tr>
                   <td class="wrapper last">
@@ -265,11 +295,60 @@
                   </td>
                 </tr>
               </table>
+              <!--Agenda desktop 3-columns-->
+              <table class="row text-size-13 hide-for-small">
+                <tr>
+                  <td class="wrapper last pt-0">
+                    <table class="twelve columns">
+                      <tr>
+                        <td class="three sub-columns text-pad">
+                          <strong>Dial-in details</strong>
+                        </td>
+                        <td class="five sub-columns last">
+                          Call-in-toll-free number(Premier):
+                        </td>
+                        <td class="four sub-columns last">
+                          1-877-647-3111
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="three sub-columns text-pad">
+                        </td>
+                        <td class="five sub-columns last">
+                          Call-in number(Premier):
+                        </td>
+                        <td class="four sub-columns last">
+                          1-719-867-0497
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="three sub-columns text-pad">
+                        </td>
+                        <td class="five sub-columns last">
+                          Audio PASSCODE:
+                        </td>
+                        <td class="four sub-columns last">
+                          <a href="#">International Numbers</a>
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
               <!--description-->
               <table class="row">
                 <tr>
                   <td class="wrapper last">
                     <table class="twelve columns">
+                      <tr>
+                        <td class="text-pad">
+                          We look forward to having you there!
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
                       <tr>
                         <td class="text-pad">
                           Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
@@ -319,7 +398,8 @@
                           <!--[if gte mso 9]>
                           <img src="http://software.dell.com/images/email/blank.gif" width="10">
                           <![endif]-->
-                          <a href="https://www.linkedin.com/company/dell-software?trk=biz-brand-tree-co-logo" class="inline-block mr-20">
+                          <a href="https://www.linkedin.com/company/dell-software?trk=biz-brand-tree-co-logo"
+                             class="inline-block mr-20">
                             <img src="http://stage.software.dell.com/images/email/icon-linkedin.png" alt="linkedin"/>
                           </a>
                           <!--[if gte mso 9]>
@@ -397,7 +477,7 @@
                       </tr>
                     </table>
                   </td>
-                  <td class="wrapper last">
+                  <td class="wrapper last pt-0">
                     <table class="six columns">
                       <tr>
                         <td class="nine sub-columns">
